# licensepp-openssl-fastapi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  requirements.txt  server.py
.gitea/workflows/: licensepp.yml
.github/workflows/: licensepp_ghcr_io.yml
blueprints/license_manager/: __init__.py  cipher.py  license.py
license_manager/: CMakeLists.txt  license_manager.cpp  license_manager.h
